--- a/Swift项目练手/Swift项目练手/Base.lproj/Main.storyboard
+++ b/Swift项目练手/Swift项目练手/Base.lproj/Main.storyboard
@@ -1,26 +1,73 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lfG-1C-04m">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="04F-JO-My9">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tabBarController id="lfG-1C-04m" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="22O-tt-Ngr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Iac-sC-vDy" kind="relationship" relationship="viewControllers" id="wm1-Bj-Xp7"/>
+                        <segue destination="ECb-oy-tZa" kind="relationship" relationship="viewControllers" id="TTK-Pi-bEg"/>
+                        <segue destination="6vP-Zy-3gX" kind="relationship" relationship="viewControllers" id="fCc-IM-Mpo"/>
+                        <segue destination="5Pc-Ko-lfd" kind="relationship" relationship="viewControllers" id="uLz-gd-Azq"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vEJ-Nc-9Nf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1082" y="144"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="XdK-5G-BaV">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="Iac-sC-vDy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="dpe-5h-OXN"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UuV-NG-3Ud" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="464" y="-359"/>
+        </scene>
+        <!--Live-->
+        <scene sceneID="BPA-51-bCl">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Live" id="ECb-oy-tZa" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="0Wq-Fy-oZE"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J5w-TG-cZo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="455" y="-58"/>
+        </scene>
+        <!--Follow-->
+        <scene sceneID="hac-n0-8gO">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Follow" id="6vP-Zy-3gX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="IaK-tD-NMN"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q2z-aT-1Z3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="565" y="184"/>
+        </scene>
+        <!--Prodfile-->
+        <scene sceneID="JrH-dT-GgM">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Prodfile" id="5Pc-Ko-lfd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="c7E-Jp-xzN"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xBP-LS-Xju" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="650" y="431"/>
         </scene>
     </scenes>
 </document>
